style. favicon 추가

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="1:1 맞춤 스타일링 코디, 패션 커뮤니티, 옷 추천, 패션 트렌드" />
     <meta name="keywords" content="패션, 커뮤니티, pick style, 스타일, 코디, 패션 커뮤니티, 옷 추천, 스타일링" />
     <link rel="canonical" href="#" />
-    <link rel="icon" href="/vite.svg" />
+    <link rel="icon" href="/favicon.svg" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="PICK STYLE" />
     <meta property="og:title" content="PICK STYLE - 스타일을 PICK 하다" />
